--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       "game7.html",
       "game8.html",
       "game9.html",
-      "game10.html"
+      "game10.html",
+      "game11.html"
     ];
 
     function getUTCMidnight() {
